--- a/style.css
+++ b/style.css
@@ -7,3 +7,160 @@
     font-weight: 400;
     font-style: normal;
 }
+
+/* shared styles */
+.flex {
+    display: flex;
+}
+
+.text-primary {
+    color: #FF900E;
+}
+
+.btn-primary {
+    background-color: #FF900E;
+    border: none;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 1.25rem;
+    color: #FFFFFF;
+    padding: 20px 25px;
+}
+
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main>section {
+    margin-top: 130px;
+}
+
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+/* dark 01 */
+
+/* dark 02 */
+.text-grey {
+
+    color: #424242
+}
+
+/* dark 03 */
+.text-light-grey {
+    color: #727272;
+}
+
+.bg-light {
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+/* header styles */
+/* navbar */
+.navbar {
+
+    justify-content: space-between;
+}
+
+.nav-links {
+
+    /* justify-content: center; */
+    align-items: center;
+    gap: 10px;
+
+}
+
+.brand {
+    font-weight: 700;
+    /* 1rem = 16px */
+    font-size: 3rem;
+}
+
+.nav-item {
+    list-style: none;
+    font-weight: 500;
+    margin-right: 30px;
+    text-decoration: none;
+}
+
+.navbar,
+.banner {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* banner */
+
+.banner-title {
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.banner-content {
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.banner-image {
+    width: 100%;
+}
+
+
+
+/* team and features */
+.team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.teams {
+
+    align-items: center;
+}
+
+.our-features {
+    max-width: 530px;
+    margin-left: 130px;
+}
+
+
+
+#quick-list {
+    font-weight: 500;
+}
+
+/* responsiveness */
+@media screen and (max-width:576px) {
+
+    .navbar,
+    .nav-links,
+    .teams {
+        flex-direction: column;
+    }
+
+    .team-img-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .our-features {
+        margin-left: 20px;
+    }
+}
+
+
+/* medium sized device */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams {
+        flex-direction: column;
+    }
+
+    .our-features {
+        margin: 50px auto;
+    }
+}
