--- a/style.css
+++ b/style.css
@@ -135,6 +135,59 @@ main>section {
     font-weight: 500;
 }
 
+/* some facts */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    /* gap: 124px;
+    margin :0 auto; */
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    height: 241px;
+    width: 241px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.fact-description{
+    max-width: 540px;
+    margin-bottom: 100px;
+}
+
+
+/* sponsor section */
+
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+display: grid;
+grid-template-columns: repeat(5,1fr);
+}
+
+.sponsor-companies img{
+filter: grayscale(100%);
+}
+
+
+
 /* responsiveness */
 @media screen and (max-width:576px) {
 
@@ -145,12 +198,23 @@ main>section {
     }
 
     .team-img-container {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: 1fr;
     }
 
     .our-features {
         margin-left: 20px;
     }
+
+    .facts-container,
+    .sponsor-companies{
+        grid-template-columns:1fr;
+        justify-items: center;
+        gap: 24px;
+    }
+
+   .sponsor-companies{
+    gap: 50px;
+   }
 }
 
 
@@ -163,4 +227,11 @@ main>section {
     .our-features {
         margin: 50px auto;
     }
+.facts-container,
+.sponsor-companies{
+    grid-template-columns: repeat(2,1fr);
+    justify-items: center;
+    gap: 50px;
+}
+   
 }
